# copenhagen-flight-tracker

./: .gitattributes  .gitignore  .yamllint  CLAUDE.md  CONTRIBUTING.md  FLIGHT_TRACKER_PLAN.md  LICENSE  README.md  config.example.py  config.py  proxies.txt.example  pyproject.toml  pyrightconfig.json  requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  chore.yml  config.yml  feature_request.yml
.github/workflows/: coverage.yml  dependency-check.yml  lint.yml  python-tests.yml  security.yml  tests.yml  yaml-lint.yml
.omo/evidence/: task-1-data-reality.txt  task-12-blobs.txt  task-13-minimal.txt
.omo/evidence/final-qa/: blob_summary.txt  grep_counts_minimal.txt  rich.csv
.omo/fixtures/: airlines.html  airlines_minimal.html  airlines_rich.html  index.html  index_minimal.html  index_rich.html  minimal.csv
deploy/: README.md  copenhagen-flight-tracker.logrotate  copenhagen-flight-tracker.service
docs/: DATA_RETENTION.md  FRONTEND.md  INSIGHTS_CONTRACT.md  INSIGHTS_DATA.md  README.md  WINDOWS_SETUP.md  troubleshooting.md
docs/superpowers/plans/: 2026-05-15-backup-db.md  2026-05-16-pyproject-toml.md
docs/superpowers/specs/: 2026-05-15-backup-design.md
frontend/: README.md  airlines.html  airlines.html.template  app.js  data.json  footer.html  header.html  index.html.template  styles.css
frontend/js/: calendar.js  charts.js  constants.js  data.js  drilldown.js  filters.js  health-dashboard.js  main.js  render-airline-matrix.js  render-airline-trends.js  render-flight-scatter.js  render-momentum.js  render-price-drops.js  render-price-percentile.js  render-volatility-index.js  state.js  utils.js
scripts/: README.md  backtest.py  backup_db.py  build_frontend_csv.py  cleanup_profiles.py  collection.py  export_csv.py  fetch_vendor.py  generate_html.py  health_check.ps1  health_check_task.ps1  query_prices.py  regenerate_frontend.py  run_daily.py  run_health_check.py  run_scheduler.py  run_scheduler_logged.ps1  scheduler_autostart.ps1  setup_db.py  update.ps1  update.sh
src/: analytics.py  backtest.py  browser_fetcher.py  config_validator.py  database.py  date_generator.py  flight_fetcher.py  frontend_csv_builder.py  health_checker.py  html_generator.py  log_config.py  migrations.py  notifier.py  price_alerter.py  proxy_manager.py  request_pacer.py  response_parser.py  route_expander.py
src/insights/: __init__.py  drops.py  flight_scatter.py  momentum.py  price_percentile.py  price_volatility_index.py  stats.py  volatility.py
tests/: conftest.py  test_analytics.py  test_backtest.py  test_backup_db.py  test_browser_fetcher.py  test_browser_fetcher_detection.py  test_collection.py  test_config_validator.py  test_database.py  test_date_generator.py  test_drops.py  test_export_csv.py  test_flight_fetcher.py  test_flight_scatter.py  test_frontend_csv_builder.py  test_health_checker.py  test_html_generator.py  test_insights_stats.py  test_integration.py  test_logging.py  test_migrations.py  test_momentum.py  test_no_config_local.py  test_notifier.py  test_price_alerter.py  test_price_percentile.py  test_price_volatility_index.py  test_proxy_manager.py  test_query_prices.py  test_regenerate_frontend.py  test_request_pacer.py  test_requirements.py  test_response_parser.py  test_route_expander.py  test_run_daily.py  test_run_daily_summary.py  test_scheduler.py  test_update_script.py  test_volatility.py
tests/browser/: README.md  test_dashboard_smoke.py
tests/fixtures/: flights_frontend_sample.csv
