[project]
name = "copenhagen-flight-tracker"
version = "0.1.0"
description = "Self-hosted flight price tracker for CPH-AMS routes"
requires-python = ">=3.9"
dependencies = [
    "fast-flights>=2.2,<3.0",
    # Pinned to 0.15.0 because later primp versions drop the chrome_131
    # impersonation profile and silently fall back to 'random' — which gives
    # every request a different TLS fingerprint and trips Google's bot wall.
    # If chrome_131 disappears upstream, bump this pin AND update
    # config.IMPERSONATION to a profile that still exists in the new version.
    "primp==0.15.0",
    "python-dateutil>=2.9.0.post0,<3.0",
    "schedule>=1.2.2,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3,<10.0",
    "ruff>=0.6.0,<1.0",
    "playwright>=1.40,<2.0",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
