[project]
name = "copenhagen-flight-tracker"
version = "0.1.0"
description = "Self-hosted flight price tracker for CPH-AMS routes"
requires-python = ">=3.9"
dependencies = [
    "fast-flights==2.2",
    "playwright==1.59.0",
    "python-dateutil>=2.9.0.post0,<3.0",
    "schedule>=1.2.2,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0,<9.0",
    "pytest-cov>=5.0.0,<8.0",
    "pyright>=1.1.0,<2.0",
    "ruff>=0.6.0,<1.0",
    "bandit>=1.8.0,<2.0",
    "pip-audit>=2.6.0,<3.0",
    "yamllint>=1.35.0,<2.0",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear

    # Higher-signal maintainability/correctness checks.
    "C90", # mccabe complexity
    "RET", # flake8-return
    "RUF", # Ruff-specific rules
    "SIM", # flake8-simplify

    # Docstring existence (production code only; style is intentionally not enforced).
    "D100",
    "D101",
    "D102",
    "D103",
    "D105",
    "D107",
]

ignore = [
    # Avoid forcing refactors purely to satisfy lint.
    "SIM105",
    "SIM102",
    # Avoid churn over Unicode punctuation in existing strings/docstrings.
    "RUF001",
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.per-file-ignores]
"config.py" = ["D100"]
"src/__init__.py" = ["D104"]
"scripts/**/*.py" = ["D100", "D101", "D102", "D103", "D105", "D107"]
"tests/**/*.py" = ["D100", "D101", "D102", "D103", "D105", "D107"]

[tool.ruff.lint.extend-per-file-ignores]
# Scripts and tests are intentionally pragmatic; keep signal high.
"scripts/**/*.py" = ["RUF046", "RUF100"]
"tests/**/*.py" = ["SIM117"]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = ["src/log_config.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
fail_under = 75
